--- a/docs/docsets/Ombi.docset/Contents/Info.plist
+++ b/docs/docsets/Ombi.docset/Contents/Info.plist
@@ -16,5 +16,7 @@
       <true/>
     <key>DashDocSetFamily</key>
       <string>dashtoc</string>
+    <key>DashDocSetFallbackURL</key>
+      <string>https://docs.ombi.network/</string>
   </dict>
 </plist>
